fix(share): cta text spacing

--- a/src/components/pages/race/infection-and-mortality-data/share.module.scss
+++ b/src/components/pages/race/infection-and-mortality-data/share.module.scss
@@ -10,8 +10,11 @@
 }
 
 .click-to-share {
+  p {
+    display: block;
+    margin: 0 auto;
+  }
   @include margin(16, (top, bottom));
-  display: block;
 }
 
 .social-sharing {
